// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-react > eslint-react 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react --js-plugins > eslint-react--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "jsPlugins": [
          "eslint-plugin-react-x",
          "eslint-plugin-react-rsc",
          "eslint-plugin-react-dom",
          "eslint-plugin-react-web-api",
          "eslint-plugin-react-hooks-extra",
          "eslint-plugin-react-naming-convention",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-dom/no-dangerously-set-innerhtml": "warn",
          "react-dom/no-dangerously-set-innerhtml-with-children": "error",
          "react-dom/no-find-dom-node": "error",
          "react-dom/no-flush-sync": "error",
          "react-dom/no-hydrate": "error",
          "react-dom/no-namespace": "error",
          "react-dom/no-render": "error",
          "react-dom/no-render-return-value": "error",
          "react-dom/no-script-url": "warn",
          "react-dom/no-unsafe-iframe-sandbox": "warn",
          "react-dom/no-use-form-state": "error",
          "react-dom/no-void-elements-with-children": "error",
          "react-hooks-extra/no-direct-set-state-in-use-effect": "warn",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react-naming-convention/context-name": "warn",
          "react-naming-convention/id-name": "warn",
          "react-naming-convention/ref-name": "warn",
          "react-naming-convention/use-state": "warn",
          "react-rsc/function-definition": "error",
          "react-web-api/no-leaked-event-listener": "warn",
          "react-web-api/no-leaked-interval": "warn",
          "react-web-api/no-leaked-resize-observer": "warn",
          "react-web-api/no-leaked-timeout": "warn",
          "react-x/jsx-key-before-spread": "warn",
          "react-x/jsx-no-comment-textnodes": "warn",
          "react-x/jsx-no-duplicate-props": "warn",
          "react-x/jsx-uses-react": "warn",
          "react-x/jsx-uses-vars": "warn",
          "react-x/no-access-state-in-setstate": "error",
          "react-x/no-array-index-key": "warn",
          "react-x/no-children-count": "warn",
          "react-x/no-children-for-each": "warn",
          "react-x/no-children-map": "warn",
          "react-x/no-children-only": "warn",
          "react-x/no-children-to-array": "warn",
          "react-x/no-clone-element": "warn",
          "react-x/no-component-will-mount": "error",
          "react-x/no-component-will-receive-props": "error",
          "react-x/no-component-will-update": "error",
          "react-x/no-context-provider": "warn",
          "react-x/no-create-ref": "error",
          "react-x/no-default-props": "error",
          "react-x/no-direct-mutation-state": "error",
          "react-x/no-forward-ref": "warn",
          "react-x/no-missing-key": "error",
          "react-x/no-nested-component-definitions": "error",
          "react-x/no-nested-lazy-component-declarations": "error",
          "react-x/no-prop-types": "error",
          "react-x/no-redundant-should-component-update": "error",
          "react-x/no-set-state-in-component-did-mount": "warn",
          "react-x/no-set-state-in-component-did-update": "warn",
          "react-x/no-set-state-in-component-will-update": "warn",
          "react-x/no-string-refs": "error",
          "react-x/no-unnecessary-use-prefix": "warn",
          "react-x/no-unsafe-component-will-mount": "warn",
          "react-x/no-unsafe-component-will-receive-props": "warn",
          "react-x/no-unsafe-component-will-update": "warn",
          "react-x/no-unused-class-component-members": "warn",
          "react-x/no-use-context": "warn",
          "react-x/no-useless-forward-ref": "warn",
          "react-x/prefer-use-state-lazy-initialization": "warn",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react --type-aware > eslint-react--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;

exports[`eslint-react merge > eslint-react--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "react-hooks/exhaustive-deps": "warn",
          "react-hooks/rules-of-hooks": "error",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/jsx-key-before-spread",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-duplicate-props",
      "@eslint-react/jsx-uses-react",
      "@eslint-react/jsx-uses-vars",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-default-props",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-prop-types",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-string-refs",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/no-useless-forward-ref",
      "@eslint-react/prefer-use-state-lazy-initialization",
      "@eslint-react/rsc/function-definition",
      "@eslint-react/dom/no-dangerously-set-innerhtml",
      "@eslint-react/dom/no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom/no-find-dom-node",
      "@eslint-react/dom/no-flush-sync",
      "@eslint-react/dom/no-hydrate",
      "@eslint-react/dom/no-namespace",
      "@eslint-react/dom/no-render",
      "@eslint-react/dom/no-render-return-value",
      "@eslint-react/dom/no-script-url",
      "@eslint-react/dom/no-unsafe-iframe-sandbox",
      "@eslint-react/dom/no-use-form-state",
      "@eslint-react/dom/no-void-elements-with-children",
      "@eslint-react/web-api/no-leaked-event-listener",
      "@eslint-react/web-api/no-leaked-interval",
      "@eslint-react/web-api/no-leaked-resize-observer",
      "@eslint-react/web-api/no-leaked-timeout",
      "@eslint-react/hooks-extra/no-direct-set-state-in-use-effect",
      "@eslint-react/naming-convention/context-name",
      "@eslint-react/naming-convention/id-name",
      "@eslint-react/naming-convention/ref-name",
      "@eslint-react/naming-convention/use-state",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/component-hook-factories",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found in config with 'files' pattern (react-x). Oxlint does not support settings in overrides, these settings will be skipped.",
  ],
}
`;
